Add build badges
Fix typo in ci about test projects for publish
Add explicit folders in sln

--- a/.azure/pipelines/ci.yml
+++ b/.azure/pipelines/ci.yml
@@ -104,7 +104,7 @@ steps:
   inputs:
     command: 'publish'
     publishWebProjects: false
-    projects: '$(IntegrationTestProjects)'
+    projects: '$(TestProjects)'
     arguments: '--configuration $(BuildConfiguration) -o $(Build.ArtifactStagingDirectory)/testlibraries'
     zipAfterPublish: true
   env:
